# doc-backend

./: .env.example  .pre-commit-config.yaml  2edeee92-0a3a-49f1-bf75-9a6c4d839d75.css  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: doccrafter-544cf-firebase-adminsdk-fbsvc-368172c6d5.json
app/core/: config.py
app/database/: db.py
app/firebase/: firebase_init.py
app/routers/: all_converted_files.py  auth.py  billing.py  dashboard.py  html.py  markdown.py  pdf.py  subscrition.py  webhook.py
app/schemas/: auth.py  schemas.py
app/services/: auth_service.py  firebase_service.py  html_to_markdown.py  html_to_pdf.py  markdown_to_html.py  markdown_to_pdf.py  payment_service.py  pdf_to_html.py  pdf_to_markdown.py  supabase_service.py
app/templates/: default.css  default_html.css
tests/: conftest.py  test_html_to_markdown.py  test_html_to_pdf.py  test_markdown_to_html.py  test_markdown_to_pdf.py  test_pdf_to_html.py  test_pdf_to_markdown.py
